name:                bvldr
version:             0.1.0.0
license-file:        LICENSE
author:              Brecht Hoflack
maintainer:          brecht.hoflack@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Bvldr.Core, Bvldr.Core.Message, Bvldr.Core.Types
  build-depends:       base >=4.6 && <4.7
                     , lens >= 4.3.3
                     , bytestring >= 0.10.4.0
                     , aeson >= 0.8.0.1
                     , text >= 1.2.0.0
                     , time >= 1.4.0.1
                     , mtl >= 2.1.2

executable bvldr
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7
                     , wai >= 3.0.1.1
                     , restmachine-core >= 0.1.0.0
                     , restmachine-wai >= 0.1.0.0
                     , warp >= 3.0
                     , lens >= 4.3.3
                     , http-types >= 0.8.5
                     , bytestring >= 0.10.4.0
                     , aeson >= 0.8.0.1
                     , text >= 1.2.0.0
                     , time >= 1.4.0.1
                     , process-extras >= 0.2
  default-language:    Haskell2010

test-suite tests
  type:			exitcode-stdio-1.0
  hs-source-dirs:	tests
  main-is:		Runner.hs
  
  build-depends:	HUnit
                      , base
                      , bytestring
                      , test-framework
                      , test-framework-hunit
                      , aeson
                      , bvldr
                      , mtl
                      , lens